ME_4600/MESDK/ME-4000/VC/DLLInit.h


typedef   int(__cdecl *PF_ME4000AOSINGLESIMULTANEOUS(unsigned int uiBoardNumber, unsigned int* puiChannelNumber, unsigned long ulCount, int iTriggerMode, int* piExtTriggerEnable, int* piExtTriggerEdge, unsigned long ulTimeOutSeconds, short* psValue);

typedef   int(__cdecl *PF_ME4000AOSTARTSYNCHRONOUS(unsigned int uiBoardNumber, unsigned int* puiChannelNumber, unsigned long ulCount, int iTriggerMode, int* piExtTriggerEnable, int* piExtTriggerEdge, unsigned long ulTimeOutSeconds);


int me4000ErrorSetDefaultProc(
    int iDefaultProcStatus);


int me4000ErrorSetUserProc(
    ME4000_P_ERROR_PROC pErrorProc);


int me4000ErrorGetMessage(
    int iErrorCode,
    char* pcBuffer,
    unsigned int uiBufferSize);


int me4000ErrorGetLastMessage(
    char* pcBuffer,
    unsigned int uiBufferSize);


int me4000GetDLLVersion(
    unsigned long* pulVersion);


int me4000GetDriverVersion(
    unsigned long* pulVersion);


int me4000FrequencyToTicks(
    double dRequiredFreq,
    unsigned long* pulTicksLowPart,
    unsigned long* pulTicksHighPart,
    double* pdAchievedFreq);


int me4000TimeToTicks(
    double dRequiredTime,
    unsigned long* pulTicksLowPart,
    unsigned long* pulTicksHighPart,
    double* pdAchievedTime);


int me4000DIOConfig(
    unsigned int uiBoardNumber,
    unsigned int uiPortNumber,
    int iPortDirection);


int me4000CntWrite(
    unsigned int uiBoardNumber,
    int iCounter,
    int iMode,
    unsigned short usValue);


int me4000ExtIrqEnable(
    unsigned int uiBoardNumber,
    ME4000_P_EXT_IRQ_PROC pExtIrqProc,
    void* pExtIrqContext);


int me4000DIOBPPortConfig(
    unsigned int uiBoardNumber,
    unsigned int uiPortNumber,
    int iOutputMode);


int me4000DIOBPWraparound(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulDataCount,
    unsigned long ulLoops,
    int iExecutionMode,
    ME4000_P_DIOBP_TERMINATE_PROC pTerminateProc,
    void* pTerminateContext,
    unsigned long ulTimeOutSeconds);


int me4000DIOBPContinuous(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulDataCount,
    ME4000_P_DIOBP_CALLBACK_PROC pCallbackProc,
    void* pCallbackContext,
    unsigned long ulTimeOutSeconds,
    unsigned long* pulNumberOfValuesWritten);


int me4000DIOBPAppendNewValues(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulNumberOfValuesToAppend,
    int iExecutionMode,
    unsigned long* pulNumberOfValuesAppended);


int me4000DIOBPStop(
    unsigned int uiBoardNumber,
    int iStopMode);


int me4000DIOBPGetStatus(
    unsigned int uiBoardNumber,
    int iWaitIdle,
    int* piStatus);


int me4000MultiSigAddressLED(
    unsigned int uiBoardNumber,
    unsigned int uiBase,
    int iLEDStatus);


int me4000MultiSigSetGain(
    unsigned int uiBoardNumber,
    unsigned int uiBase,
    int iChannelGroup,
    int iGain);


int me4000MultiSigAIDigitToSize(
    short sDigit,
    int iGain,
    int iModuleType,
    double dIMeasured,
    double* pdSize);