ME_4600/MESDK/ME-4000/VBasic/ME4000.bas


'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                        Global Consts for DIO Routines                              |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

' Defines for port numbers
Global Const ME4000_DIO_PORT_A = 0
Global Const ME4000_DIO_PORT_B = 1
Global Const ME4000_DIO_PORT_C = 2
Global Const ME4000_DIO_PORT_D = 3

' Port direction for me4000DIOConfig - Parameter iDir
Global Const ME4000_DIO_PORT_INPUT = &H40201
Global Const ME4000_DIO_PORT_OUTPUT = &H40202


'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                       Defines for counter Routines                            |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

' Mode for me4000CntWrite - Parameter iMode
Global Const ME4000_CNT_MODE_0 = &H50101
Global Const ME4000_CNT_MODE_1 = &H50102
Global Const ME4000_CNT_MODE_2 = &H50103
Global Const ME4000_CNT_MODE_3 = &H50104
Global Const ME4000_CNT_MODE_4 = &H50105
Global Const ME4000_CNT_MODE_5 = &H50106

'------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                 Defines for external interrupt Routines                       |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

' Typedef for external interrupt callback routine used in me4000ExtIrqEnable
' typedef void (_stdcall * ME4000_P_EXT_IRQ_PROC)(void* pExtIrqContext);

'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'             Global Consts for DIO Bit Pattern Routines                        |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

' Defines for port numbers
Global Const ME4000_DIOBP_PORT_A = 0
Global Const ME4000_DIOBP_PORT_B = 1
Global Const ME4000_DIOBP_PORT_C = 2
Global Const ME4000_DIOBP_PORT_D = 3

' Output mode for me4000DIOBPPortConfig - Parameter iOutputMode
Global Const ME4000_DIOBP_OUTPUT_MODE_BYTE_LOW = &H60101
Global Const ME4000_DIOBP_OUTPUT_MODE_BYTE_HIGH = &H60102

' Trigger mode for me4000DIOBPAOConfig - Parameter iTriggerMode
Global Const ME4000_DIOBP_TRIGGER_SOFTWARE = &H60201
Global Const ME4000_DIOBP_TRIGGER_EXT_DIGITAL = &H60202

' External trigger flank type for me4000DIOBPAOConfig - Parameter
' iExtTriggerEdge
Global Const ME4000_DIOBP_TRIGGER_EXT_EDGE_RISING = &H60301
Global Const ME4000_DIOBP_TRIGGER_EXT_EDGE_FALLING = &H60302
Global Const ME4000_DIOBP_TRIGGER_EXT_EDGE_BOTH = &H60303

' Execution mode for me4000DIOBPWraparound - Parameter iExecutionMode
Global Const ME4000_DIOBP_WRAPAROUND_BLOCKING = &H60401
Global Const ME4000_DIOBP_WRAPAROUND_ASYNCHRONOUS = &H60402

' Global Const for an infinite (endless) execution for me4000DIOBPWraparound -
' Parameter ulLoops
Global Const ME4000_DIOBP_WRAPAROUND_INFINITE = &H0

' Execution mode for me4000DIOBPAppendNewValues - Parameter iExecutionMode
Global Const ME4000_DIOBP_APPEND_NEW_VALUES_BLOCKING = &H60501
Global Const ME4000_DIOBP_APPEND_NEW_VALUES_NON_BLOCKING = &H60502

' Wait modus for me4000DIOBPGetStatus - Parameter iWaitIdle
Global Const ME4000_DIOBP_WAIT_IDLE = &H60601
Global Const ME4000_DIOBP_WAIT_NONE = &H60602

' Return status for me4000DIOBPGetStatus - Parameter piStatus
Global Const ME4000_DIOBP_STATUS_IDLE = &H60701
Global Const ME4000_DIOBP_STATUS_BUSY = &H60702

' Stop mode for me4000DIOBPStop - Parameter iStopMode
Global Const ME4000_DIOBP_STOP_MODE_LAST_VALUE = &H60801
Global Const ME4000_DIOBP_STOP_MODE_IMMEDIATE = &H60802

' Typedef for DIO BP terminate function - used in me4000DIOBPWraparound
' typedef void (_stdcall * ME4000_P_DIOBP_TERMINATE_PROC)(void* pTerminateContext);

' Typedef for DIO BP callback function - used in me4000DIOBPContinuous
' typedef void (_stdcall * ME4000_P_DIOBP_CALLBACK_PROC)(unsigned long ulBufferAvailable,
'                                                                    void* pCallbackContext);

'------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'              Global Consts specifically for MultiSig routines                      |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

' LED status for me4000MultiSigAddressLED - Parameter iLEDStatus
Global Const ME4000_MULTISIG_LED_OFF = &H70101
Global Const ME4000_MULTISIG_LED_ON = &H70102

' Channel group for me4000MultiSigSetGain - Parameter iChannelGroup
Global Const ME4000_MULTISIG_GROUP_A = &H70201
Global Const ME4000_MULTISIG_GROUP_B = &H70202

' Gain for me4000MultiSigSetGain and me4000MultiSigAIDigitToSize -
' Parameter iGain
Global Const ME4000_MULTISIG_GAIN_1 = &H70301
Global Const ME4000_MULTISIG_GAIN_10 = &H70302
Global Const ME4000_MULTISIG_GAIN_100 = &H70303

' Module type for me4000MultiSigAIDigitToSize - Parameter iModuleType
Global Const ME4000_MULTISIG_MODULE_NONE = &H70401
Global Const ME4000_MULTISIG_MODULE_DIFF16_10V = &H70402
Global Const ME4000_MULTISIG_MODULE_DIFF16_20V = &H70403
Global Const ME4000_MULTISIG_MODULE_DIFF16_50V = &H70404
Global Const ME4000_MULTISIG_MODULE_CURRENT16_0_20MA = &H70405
Global Const ME4000_MULTISIG_MODULE_RTD8_PT100 = &H70406
Global Const ME4000_MULTISIG_MODULE_RTD8_PT500 = &H70407
Global Const ME4000_MULTISIG_MODULE_RTD8_PT1000 = &H70408

' Module type for me4000MultiSigAIDigitToSize - Parameter iModuleType
' 500 Milliampere
Global Const ME4000_MULTISIG_I_MEASURED_DEFAULT = 0.0005




'Note, that string arguments only work with initialized string variables
'      Dim gsTextBuffer As String * 256 or alternatively  sBuffer = String(256, Chr(0))
'-------------------------------------------------------------------------------------------

'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                             ME4000 Interface                                  |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                         Board Independant Routines                            |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                               Error Routines                                  |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

Declare Function me4000ErrorSetDefaultProc Lib "me4000Ex.dll" Alias "_me4000VB_ErrorSetDefaultProc@4" (ByVal lDefaultProcStatus As Long) As Long

Declare Function me4000ErrorSetUserProc Lib "me4000Ex.dll" Alias "_me4000VB_ErrorSetUserProc@4" (ByVal pErrorProc As Long) As Long

Declare Function me4000ErrorGetMessage Lib "me4000Ex.dll" Alias "_me4000VB_ErrorGetMessage@12" (ByVal lErrorCode As Long, ByVal pcBuffer As String, ByVal lBufferSize As Long) As Long

Declare Function me4000ErrorGetLastMessage Lib "me4000Ex.dll" Alias "_me4000VB_ErrorGetLastMessage@8" (ByVal pcBuffer As String, ByVal lBufferSize As Long) As Long

'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                               Version Routines                                |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

Declare Function me4000GetDLLVersion Lib "me4000Ex.dll" Alias "_me4000VB_GetDLLVersion@4" (ByRef plVersion As Long) As Long

Declare Function me4000GetDriverVersion Lib "me4000Ex.dll" Alias "_me4000VB_GetDriverVersion@4" (ByRef plVersion As Long) As Long

'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                               Utility Routines                                |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

Declare Function me4000FrequencyToTicks Lib "me4000Ex.dll" Alias "_me4000VB_FrequencyToTicks@20" (ByVal dRequiredFreq As Double, ByRef plTicksLowPart As Long, ByRef plTicksHighPart As Long, ByRef pdAchievedFreq As Double) As Long

Declare Function me4000TimeToTicks Lib "me4000Ex.dll" Alias "_me4000VB_TimeToTicks@20" (ByVal dRequiredTime As Double, ByRef plTicksLowPart As Long, ByRef plTicksHighPart As Long, ByRef pdAchievedTime As Double) As Long
